# atpqc-cuda

./: .gitignore  Makefile  README.md  bench_kyber.sh  param_search.py  pyproject.toml
src/lib/: cuda_debug.hpp  cuda_resource.hpp
src/lib/fips202_ws/: device.cu  device.cuh  global.cu  global.cuh  host.cuh  params.cuh
src/lib/kyber/: params.cuh  reduce.cuh  variants.cuh  zetas_table.cu  zetas_table.cuh
src/lib/kyber/arithmetic_mt/: global.cu  global.cuh  host.cuh  kernel_params.cuh
src/lib/kyber/endecode_mt/: device.cuh  global.cu  global.cuh  host.cuh  kernel_params.cuh
src/lib/kyber/genpoly_warp/: device.cuh  global.cu  global.cuh  host.cuh  kernel_params.cuh
src/lib/kyber/ntt_ctgs_128t/: device.cu  device.cuh  global.cu  global.cuh  host.cuh
src/lib/kyber/ntt_ctgs_64t/: device.cu  device.cuh  global.cu  global.cuh  host.cuh
src/lib/kyber/primitive/: ccakem_dec.cuh  ccakem_enc.cuh  ccakem_keypair.cuh  common.cuh  cpapke_dec.cuh  cpapke_enc.cuh  cpapke_keypair.cuh
src/lib/kyber/symmetric_ws/: device.cuh  host.cuh
src/lib/rng/: std_mt19937_64.hpp  std_random_device.hpp  wrapper.hpp  zero.hpp
src/lib/verify_cmov_ws/: device.cuh  global.cu  global.cuh  host.cuh
src/main/kyber/bench/: main.cu
src/main/kyber/test/: main.cu
