[tool.poetry]
name = "atpqc-cuda"
version = "1.0.0"
description = ""
authors = ["Tatsuki Ono <t_ono@easter.kuee.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pydocstyle = "^5.1.1"
mypy = "^0.790"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
